--- a/Test_Clustering.ipynb
+++ b/Test_Clustering.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is based on \"Comparing different clustering algorithms on toy datasets\" in the sklearn docs:\n",
+    "\n",
+    "http://scikit-learn.org/stable/auto_examples/cluster/plot_cluster_comparison.html#example-cluster-plot-cluster-comparison-py"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
